--- a/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
+++ b/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
@@ -23,19 +23,14 @@
   );
 }
 
-.btn-text {
-  max-width: max-content !important;
-  width: max-content !important;
-  min-width: 20px !important;
-  font-size: 16px !important;
-  padding: 0px !important;
-  height: auto !important;
-}
-
 .mt-4 {
   margin-top: 4px;
 }
 
-.btn-primary {
+.ch-action-btn {
   margin-top: 24px;
+}
+
+.ch-action-link-btn {
+  margin-top: 13.5px;
 }
