--- a/react_webviews/src/external_portfolio/components/Style.scss
+++ b/react_webviews/src/external_portfolio/components/Style.scss
@@ -415,3 +415,10 @@ $light_periwinkle: #d3dbe4;
     margin-left: 40px;
   }
 }
+
+.portfolio-generated-email {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  color: var(--secondary);
+}
