--- a/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
+++ b/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
@@ -5,10 +5,24 @@
   border-radius: 12px;
   padding: 16px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   cursor: pointer;
+  &.default-pointer {
+    cursor: default;
+  }
+
+  .ch-top-section-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .ch-bottom-section-wrapper {
+    background: linear-gradient(180deg, rgba(51, 207, 144, 0.2) 27.54%, rgba(130, 121, 248, 0.13) 100%);
+    padding: 8px 16px;
+    margin: 24px -16px -24px -16px;
+  }
 }
 
 .ch-hero-wrapper {
