Added class override for external portfolio Container

--- a/react_webviews/src/external_portfolio/components/Style.scss
+++ b/react_webviews/src/external_portfolio/components/Style.scss
@@ -8,8 +8,7 @@ $light_periwinkle: #d3dbe4;
 }
 
 .hni-container {
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-bottom: 90px !important;
 }
 
 .cams-iframe {
