--- a/react_webviews/src/designSystem/molecules/MenuItem/MenuItem.scss
+++ b/react_webviews/src/designSystem/molecules/MenuItem/MenuItem.scss
@@ -6,15 +6,12 @@
   align-items: center;
   cursor: pointer;
 
-  .mi-left-wrapper {
+  .mi-right-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-  }
-
-  .mi-left-img {
-    margin-right: 24px;
+    flex: 1 1 100%;
   }
 
   .mi-text-wrapper {
