UPDATED: moved img stying to scss file of Tag

--- a/react_webviews/src/designSystem/molecules/Tag/Tag.scss
+++ b/react_webviews/src/designSystem/molecules/Tag/Tag.scss
@@ -12,6 +12,8 @@
 
   .tag-left-image {
     margin-right: 8px;
+    height: 16px;
+    width: 16px;
     &.tag-left-image-small {
       margin-right: 4px;
     }
