--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -96,6 +96,12 @@
         font-weight: 600;
       }
 
+      .wv-tag {
+        font-size: 8px;
+        padding: 0 5px;
+        font-weight: 700;
+      }
+
       .subtitle {
         color: #767e86;
         font-size: 14px;
