1. Removed kyc card in sdk landing. 2. Added discliamer 3. Added partnership text for sdk

--- a/react_webviews/src/common/ui/SebiRegistrationFooter/WVSebiRegistrationFooter.scss
+++ b/react_webviews/src/common/ui/SebiRegistrationFooter/WVSebiRegistrationFooter.scss
@@ -1,6 +1,13 @@
 .wv-sebi-registration-footer {
   padding: 20px 0;
 
+  .wv-srd-partner-text {
+    color: var(--steelgrey);
+    font-size: 8px;
+    line-height: 11px;
+    padding-bottom: 5px;
+  }
+
   .wv-srd-partner-logo {
     height: 20px;
     max-width: 90px;
