--- a/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
+++ b/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
@@ -44,6 +44,11 @@
       color: var(--primary);
     }
   }
+
+  .generic-hr {
+    margin: 70px -20px 0;
+    border-color: #d6d6d6;
+  }
 }
 
 .sdk-background{
