--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -333,7 +333,7 @@
       }
 
       .subtitle{
-        color: #160d2e;
+        color: var(--steelgrey);
         font-size: 13px;
         margin: 4px 0 0 0;
 
