--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -330,6 +330,7 @@
       .title{
         font-size: 20px;
         font-weight: bold;
+        color: var(--gunmetal);
       }
 
       .subtitle{
