--- a/react_webviews/src/designSystem/molecules/LandingHeader/LandingHeader.scss
+++ b/react_webviews/src/designSystem/molecules/LandingHeader/LandingHeader.scss
@@ -2,23 +2,23 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  &.center-align {
+  &.landing-header-center-align {
     align-items: center;
   }
-  
-  .lh-subtitle {
-    max-width: 99ch;
-    margin-top: 8px;
-  }
-  
-  .lh-date-wrapper {
-    margin-top: 4px;
+
+  .lh-subtitle-wrapper { 
+    width: 100%;
+    .lh-subtitle {
+      max-width: 99ch;
+      margin-top: 8px;
+    }
   }
   
   .lh-description-list {
       margin: 0px;
       padding-left: 20px;
       margin-top: 8px;
+      width: 100%;
   }
   .lh-description-item {
       margin-bottom: 8px;
