--- a/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
+++ b/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
@@ -1,16 +1,17 @@
 .cv-wrapper {
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    cursor: pointer;
-}
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 12px;
+  cursor: pointer;
 
-.cv-elevation {
-    box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.2);
-    border: none;
-}
-
-.cv-mt-4 {
+  .cv-img-top {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 4px;
+  }
+  .cv-mt-4 {
     margin-top: 4px;
+  }
 }
