--- a/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
+++ b/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
@@ -3,10 +3,17 @@
   flex-direction: row;
   cursor: pointer;
   padding: 16px;
+
+  .info-card-left-img {
+    width: 32px;
+    height: 32px;
+    margin-right: 16px;
+  }
+
   .ic-text-wrapper {
     display: flex;
     flex-direction: column;
-    margin-left: 16px;
+    flex: 1;
 
     .ic-subtitle-text {
       margin-top: 4px;
