--- a/react_webviews/src/freedom_plan/pages/Landing.scss
+++ b/react_webviews/src/freedom_plan/pages/Landing.scss
@@ -1,15 +1,12 @@
 $tableBorder: 1px solid var(--primaryVariant2);
 
 .freedom-plan-landing-header-color {
-  background-color: var(--darkblue) !important;
+  background-color: var(--primaryVariant5) !important;
   color: white !important;
 }
 
-.freedom-plan-landing-container {
-  background-color: var(--darkblue);
-}
-
 .freedom-plan-landing {
+  background-color: var(--primaryVariant5);
   .wv-iph-with-img {
     justify-content: flex-end;
     align-items: flex-end;
