--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -1,15 +1,12 @@
 .select-freedom-plan {
-  .select-freedom-plan-container {
-    display: flex;
-    overflow: auto;
-    width: 100%;
-    height: 110px;
-    align-items: center;
+  .wv-bc-left .wv-bcl-subtitle {
+    margin: 0px;
+  }
 
+  .select-freedom-plan-container {
     .sfpc-loader {
-      width: 110px !important;
-      height: 88px !important;
-      margin: 0 15px 5px 0 !important;
+      height: 50px !important;
+      margin: 0px 0px 10px !important;
     }
 
     .freedom-plan-option {
@@ -19,22 +16,19 @@
       font-size: 12px;
       line-height: 19px;
       color: var(--gunmetal);
-      min-width: 110px;
-      min-height: 88px;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 10px;
+      align-items: center;
+      padding: 15px 20px;
       position: relative;
-      margin: 0 15px 0px 0;
+      margin-bottom: 10px;
       cursor: pointer;
 
       .selected-icon {
         position: absolute;
         width: 22px !important;
         height: 22px !important;
-        top: -9px;
-        right: -9px;
+        top: -11px;
+        right: -2px;
       }
 
       .fpo-name {
@@ -45,13 +39,13 @@
         font-size: 16px;
         line-height: 21px;
         color: var(--primary);
-        padding-top: 10px;
+        padding-left: 10px;
       }
 
       .fpo-popular {
         position: absolute;
         top: -11px;
-        left: 18px;
+        left: 20px;
         background: #ffe0ec;
         border-radius: 10px;
         font-weight: bold;
@@ -65,11 +59,16 @@
     .selected-plan {
       border: 2px solid var(--primary);
     }
+
+    .popular-plan {
+      margin-top: 20px;
+    }
   }
 
   .helper-note {
     font-size: 11px;
     color: var(--steelgrey);
+    padding-bottom: 13px;
   }
 
   .error-message {
