Revert "UPDATE: Info Card"
This reverts commit 679d9cf284131661e4229928660a383f77abd891.

--- a/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
+++ b/react_webviews/src/designSystem/molecules/InfoCard/InfoCard.scss
@@ -3,17 +3,10 @@
   flex-direction: row;
   cursor: pointer;
   padding: 16px;
-
-  .info-card-left-img {
-    width: 32px;
-    height: 32px;
-    margin-right: 16px;
-  }
-
   .ic-text-wrapper {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    margin-left: 16px;
 
     .ic-subtitle-text {
       margin-top: 4px;
