--- a/react_webviews/src/designSystem/molecules/HighlightInfo/HighlightInfo.scss
+++ b/react_webviews/src/designSystem/molecules/HighlightInfo/HighlightInfo.scss
@@ -3,10 +3,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     border-radius: 4px;
+    flex: 1;
     cursor: pointer;
 
     .hi-img-wrapper {
+        width: 24px;
+        height: 24px;
         margin-left: 10px;
     }
 }
