--- a/react_webviews/src/designSystem/molecules/ConfirmAction/ConfirmAction.scss
+++ b/react_webviews/src/designSystem/molecules/ConfirmAction/ConfirmAction.scss
@@ -1,25 +1,25 @@
 .confirm-action-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 16px;
+  padding-right: 16px;
+  width: 100%;
+  height: 53px;
+  border-radius: 8px;
+  cursor: default;
+  .confirm-action-left-img {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+  }
+
+  .confirm-action-right-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    padding-left: 16px;
-    padding-right: 16px;
-    width: 100%;
-    height: 53px;
-    border-radius:8px;
-    .confirm-action-left-img {
-        width: 24px;
-        height: 24px;
-        margin-right: 8px;
-    }
-
-    .confirm-action-right-wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        flex: 1;
-
-    }
+    flex: 1;
+  }
 }
