--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -93,6 +93,24 @@
   }
 }
 
+.reports-kyc-status {
+  text-align: center;
+  font-size: 13px;
+  line-height: 21px;
+  color: var(--steelgrey);
+
+  .rks-banner {
+    min-height: 150px;
+  }
+
+  .rks-title {
+    font-weight: 500;
+    font-size: 15px;
+    color: var(--gunmetal);
+    margin: 40px 0 10px 0;
+  }
+}
+
 .reports-funds {
   line-height: 1.5;
   color: #333333;
