--- a/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
+++ b/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
@@ -1,14 +1,29 @@
-.ec-wrapper {
-  cursor: pointer;
-
-  .ec-kw-title-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .ec_info_icon {
-    margin-left: 8px;
+.estimation-card-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+  border-radius: 12px;
+  flex: 1;
+  cursor: default;
+  &.ec-cursor-pointer {
     cursor: pointer;
+  }
+  .ec-left-wrapper {
+    flex: 1;
+    .ec-left-title-wrapper {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      > img {
+        cursor: pointer;
+      }
+      .ec_info_icon {
+        margin-left: 8px;
+        cursor: pointer;
+      }
+    }
+  }
+  .ec-right-wrapper {
+    flex: 1;
   }
 }
