--- a/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
@@ -1,15 +1,17 @@
 .freedom-plan-card {
   padding: 0px;
+  background-color: var(--highlight);
+  position: relative;
 
   .fpc-content {
     padding: 25px 0 25px 20px;
 
     .fpc-title {
-      color: var(--primaryVariant5);
-      font-weight: 500;
-      font-size: 26px;
-      line-height: 28px;
-      padding-top: 25px;
+      color: var(--gunmetal);
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 22px;
+      width: 90%;
     }
 
     .fpc-subtitle {
@@ -17,17 +19,38 @@
       font-size: 10px;
       line-height: 12px;
       font-weight: bold;
+      margin: 7px 0px 17px;
+
+      span {
+        margin: 0px 5px;
+      }
+    }
+
+    .fpc-button {
+      background-color: #ffffff;
+      width: 155px;
+      padding: 11px 15px !important;
     }
 
     .fpc-button-arrow {
-      width: 16px !important;
-      height: 16px !important;
       margin-left: 14px !important;
     }
   }
 
   .fpc-icon {
-    min-height: 180px;
-    min-width: 196px;
+    height: 170px !important;
+    width: 165px !important;
+    position: absolute;
+    right: 0;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .freedom-plan-card {
+    .fpc-icon {
+      bottom: 0;
+      width: 130px !important;
+      height: unset !important;
+    }
   }
 }
