--- a/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
+++ b/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
@@ -1,41 +1,48 @@
-.product-item-parent {
-    min-width: 330px;
-  .product-item-wrapper {
+.product-item-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex: 1;
+  cursor: pointer;
+
+  .product-item-left-img {
+    width: 40px;
+    height: 40px;
+    margin-right: 8px;
+  }
+
+  .pi-right-wrapper {
+    flex: 1;
+  }
+
+  .pi-child-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-
-    .pi-right-wrapper {
-      flex: 1;
+    align-items: center;
+    justify-content: space-between;
+    .pi-left-section {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
     }
 
-    .pi-child-wrapper {
+    .pi-ls-bottom-section {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      .pi-left-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+      margin-top: 8px;
+      .tag-wrapper,.label-tag-wrapper {
+        cursor: pointer;
       }
+      .pi-ls-bottom-item {
+        margin-right: 8px;
+      }
+    }
 
-      .pi-ls-bottom-section {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 8px;
-        .pi-left-tag,
-        .p-right-tag {
-          margin-right: 16px;
-        }
-      }
-
-      .pi-right-section {
-        margin-left: 10px;
-        align-self: baseline;
-      }
+    .pi-right-section {
+      margin-left: 10px;
+      align-self: baseline;
     }
   }
 }
