--- a/react_webviews/src/designSystem/molecules/FeatureCard/FeatureCard.scss
+++ b/react_webviews/src/designSystem/molecules/FeatureCard/FeatureCard.scss
@@ -10,7 +10,11 @@
   box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
   flex: 1;
-  cursor: pointer !important;
+  cursor: pointer;
+
+  .label-tag-wrapper,.tag-wrapper {
+    cursor: pointer;
+  }
 
   .fc-divider {
     margin-left: -16px;
