UPDATE: Bottomsheet 1. replaced Imgc with Icon atom 2. Added story.

--- a/react_webviews/src/designSystem/organisms/BottomSheet/BottomSheet.scss
+++ b/react_webviews/src/designSystem/organisms/BottomSheet/BottomSheet.scss
@@ -10,10 +10,16 @@
 
   .btm-sheet-header-wrapper {
     @include flex-row();
+    .btn-sheet-header-img {
+      margin-right: 8px
+    }
   }
 
   .btm-sheet-label-wrapper {
     @include flex-row();
+    .btn-sheet-label-img {
+      margin-right: 16px;
+    }
     margin-top: 8px;
   }
 
