--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -126,6 +126,47 @@
         }
       }
     }
+
+    .ma-freedom-plan {
+      padding: 15px 0;
+
+      .ma-fp-content {
+        padding: 0px 20px;
+
+        .ma-fp-title {
+          font-weight: 500;
+          font-size: 13px;
+          line-height: 21px;
+          color: var(--gunmetal);
+        }
+
+        .ma-fp-subtitle {
+          font-size: 8px;
+          line-height: 9px;
+          color: var(--steelgrey);
+          margin-top: 5px;
+        }
+      }
+
+      .ma-fp-active, .ma-fp-renewal {
+        color: #D04954;
+        font-size: 10px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+      }
+
+      .ma-fp-active {
+        .ma-fp-subtitle {
+          color: #ADB1C3;
+        }
+
+        .wv-clickable-text-elem {
+          color: var(--primary);
+          font-weight: normal;
+          font-size: 10px;
+        }
+      }
+    }
   }
 }
 
