Added freedom plan navigation

--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -5,6 +5,11 @@
     margin: -10px 0 20px 0;
   }
 
+  .invest-fp-loader {
+    min-height: 170px;
+    margin-bottom: 15px !important;
+  }
+
   .kyc {
     display: flex;
     justify-content: space-between;
