Added dark background color

--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -20,7 +20,7 @@
 
 .bfdl-announcement-dialog {
   .MuiPaper-root {
-    background-color: var(--darkblue);
+    background-color: var(--darkBackground);
   }
 
   .bfdl-announcement-dialog-title {
