--- a/react_webviews/src/freedom_plan/pages/Landing.scss
+++ b/react_webviews/src/freedom_plan/pages/Landing.scss
@@ -1,12 +1,12 @@
 $tableBorder: 1px solid var(--primaryVariant2);
 
 .freedom-plan-landing-header-color {
-  background-color: var(--darkblue) !important;
+  background-color: var(--darkBackground) !important;
   color: white !important;
 }
 
 .freedom-plan-landing {
-  background-color: var(--darkblue);
+  background-color: var(--darkBackground);
   .wv-iph-with-img {
     justify-content: flex-end;
     align-items: flex-end;
