Fixed: for my account flow navigate back to my account screen

--- a/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
@@ -2,6 +2,7 @@
   padding: 0px;
   background-color: var(--highlight);
   position: relative;
+  cursor: pointer;
 
   .fpc-content {
     padding: 25px 0 25px 20px;
