--- a/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
@@ -3,13 +3,26 @@
   flex-direction: column;
   background-color: white;
   flex: 1;
-  
+  padding-top: 56px;
+  &.nav-header-fixed {
+    position: fixed;
+    width: var(--desktop-width) !important;
+  }
+
   .nav-header-top-section {
     padding: 16px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    position: fixed;
+    top: 60px;
+    width: var(--desktop-width) !important;
+    z-index: 1400 !important;
+    background-color: white;
+  }
+  .nav-header-title{
+    opacity: 0;
   }
 
   .nav-header-left {
@@ -39,12 +52,13 @@
   }
 
   .nav-bar-tabs-wrapper {
-    margin-top: 24px;
+    // margin-top: 24px;
     padding: 0px 16px;
   }
 
   .nav-bar-subtitle-wrapper {
     padding: 0px 16px;
+    padding-bottom: 24px;
     .lh-subtitle {
       margin-top: 8px;
     }
@@ -53,6 +67,25 @@
       padding-left: 20px;
       margin-top: 8px;
       width: 100%;
+    }
+  }
+}
+
+.nav-bar-tabs-wrapper {
+  background-color: white;
+  // width: var(--desktop-width) !important;
+  // z-index: 1300 !important;
+  // background-color: white;
+}
+
+@media (max-width: 600px) {
+  .nav-header-wrapper {
+    &.nav-header-fixed {
+      position: fixed;
+      width: 100% !important;
+    }
+    .nav-header-top-section {
+      top: 0px;
     }
   }
 }
