Added margin top for freedom card

--- a/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
@@ -3,6 +3,7 @@
   background-color: var(--highlight);
   position: relative;
   cursor: pointer;
+  margin-top: 20px;
 
   .fpc-content {
     padding: 25px 0 25px 20px;
