--- a/react_webviews/src/designSystem/molecules/Filter/Filter.scss
+++ b/react_webviews/src/designSystem/molecules/Filter/Filter.scss
@@ -2,18 +2,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 16px 0px;
+  cursor: pointer;
 
   .filter-nav-badge {
-    border-radius: 100%;
-    height: 20px;
-    width: 20px;
-    position: relative;
-
-    .filter-nav-badge-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+    margin-left: 10px;
   }
 }
