--- a/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
@@ -3,14 +3,8 @@
   flex-direction: column;
   background-color: white;
   flex: 1;
+  position: relative;
   padding-top: 56px;
-  &.nav-header-fixed {
-    position: fixed;
-    width: var(--desktop-width);
-    .nav-bar-tabs-wrapper {
-      margin-right: 10px;
-    }
-  }
 
   .nav-header-top-section {
     padding: 16px;
@@ -68,6 +62,17 @@
   .nav-bar-tabs-wrapper {
     padding: 0px 16px;
     background-color: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    &.tab-position-change {
+      position: fixed;
+      width: var(--desktop-width);
+      left: unset;
+      bottom: unset;
+      padding-right: 26px;
+    }
   }
 
   .nav-bar-title-wrapper + .nav-bar-subtitle-wrapper {
@@ -101,11 +106,11 @@
 
 @media (max-width: 600px) {
   .nav-header-wrapper {
-    &.nav-header-fixed {
-      position: fixed;
-      width: 100% !important;
-      .nav-bar-tabs-wrapper {
-        margin-right: 0px;
+    .nav-bar-tabs-wrapper {
+      &.tab-position-change {
+        position: fixed;
+        width: 100%;
+        padding-right: 16px;
       }
     }
     .nav-header-top-section {
