--- a/react_webviews/src/designSystem/organisms/Container/Container.scss
+++ b/react_webviews/src/designSystem/organisms/Container/Container.scss
@@ -1,9 +1,27 @@
 .container-wrapper {
-    height: 100%;
-    background-color: rgb(214, 214, 87);
-    overflow: auto;
+  height: 100%;
+  overflow: auto;
+  position: relative;
   .container-content-wrapper {
+    padding: 0px 16px 20px 16px;
+  }
+
+  .container-footer-wrapper {
+    margin-top: 40px;
     padding: 0px 16px;
-    background-color: red;
+  }
+}
+
+@media (max-width: 600px) {
+  .container-wrapper {
+    .container-footer-wrapper {
+      display: block;
+      position: fixed;
+      background-color: white;
+      padding: 8px 16px 16px 16px;
+      bottom: 0px;
+      left: 0;
+      right: 0;
+    }
   }
 }
