--- a/react_webviews/src/designSystem/organisms/Container/Container.scss
+++ b/react_webviews/src/designSystem/organisms/Container/Container.scss
@@ -2,6 +2,7 @@
   height: 100%;
   overflow: auto;
   position: relative;
+  background-color: white;
   .container-content-wrapper {
     padding: 0px 16px 20px 16px;
   }
