UPDATE: updated width and height with minwidth and min height

--- a/react_webviews/src/designSystem/atoms/OrderStep/OrderStep.scss
+++ b/react_webviews/src/designSystem/atoms/OrderStep/OrderStep.scss
@@ -5,8 +5,8 @@
 
   .aos-circle {
     border-radius: 50%;
-    width: 32px;
-    height: 32px;
+    min-width: 32px;
+    min-height: 32px;
     margin-right: 14px;
     display: flex;
     align-items: center;
