--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -1,38 +1,27 @@
-.navigation-popup-wrapper {
-  .nav-popup-child {
-    position: relative;
+.molecule-navigation-popup {
+  .MuiPaper-root {
+    padding: 24px;
+    min-width: 263px;
+    box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04),
+      0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
   }
 
-  .MuiModal-root {
-    // background-color: rgba(0, 0, 0, 0.6);
-    position: initial;
-  }
-  .nav-popup-paper {
-    position: absolute !important;
-    top: 0px !important;
-    left: 0px !important;
-    transform: translateX(-50%) 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms !important;
-  }
+  .np-label-wrapper {
+    padding-top: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 
-  .MuiBackdrop-root {
-    background-color: rgba(0, 0, 0, 0.6);
-    top: 60px;
-    margin-left: 300px;
-    position: fixed !important;
-    width: calc(100% - 300px);
-    max-width: var(--desktop-width);
-    height: initial;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .navigation-popup-wrapper {
-    .MuiBackdrop-root {
-      top: 0px;
-      margin-left: 0px;
-      max-width: 100%;
-      width: 100%;
-      height: 100%;
+    .np-lw-dot {
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      margin-right: 4px;
     }
+  }
+
+  .np-label-wrapper:first-child {
+    padding-top: 0px;
   }
 }
