--- a/react_webviews/src/designSystem/molecules/Footer/Footer.scss
+++ b/react_webviews/src/designSystem/molecules/Footer/Footer.scss
@@ -1,12 +1,16 @@
 .footer-wrapper {
   .footer-stack-wrapper {
-    button {
+    > button {
       flex-basis: 100%;
       min-width: fit-content;
       &:only-child {
         max-width: fit-content;
         margin: 0px auto;
       }
+    }
+    .confirm-action-wrapper{
+      max-width: fit-content;
+      margin: 0px auto;
     }
   }
 }
@@ -18,6 +22,10 @@
           &:only-child {
             max-width: 100%;
           }
+        }
+        .confirm-action-wrapper{
+          max-width: 100%;
+          margin: unset;
         }
       }
   }
