--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -7,6 +7,10 @@
     border-radius: 12px;
   }
 
+  .MuiBackdrop-root {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
   .np-label-wrapper {
     padding-top: 16px;
     cursor: pointer;
@@ -14,8 +18,8 @@
     align-items: center;
 
     .np-lw-dot {
-      width: 4px;
-      height: 4px;
+      min-width: 4px;
+      min-height: 4px;
       border-radius: 50%;
       margin-right: 4px;
     }
