--- a/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationHeader/NavigationHeader.scss
@@ -61,6 +61,7 @@
 
   .nav-bar-tabs-wrapper {
     padding: 0px 16px;
+    z-index: 10;
     background-color: white;
     position: absolute;
     bottom: 0;
