--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -15,14 +15,14 @@
   .np-label-wrapper {
     padding-top: 16px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
 
     .np-lw-dot {
       min-width: 4px;
       min-height: 4px;
       border-radius: 50%;
       margin-right: 4px;
+      display: inline-block;
+      margin-bottom: 4px;
     }
   }
 
