--- a/react_webviews/src/designSystem/organisms/Container/Container.scss
+++ b/react_webviews/src/designSystem/organisms/Container/Container.scss
@@ -2,27 +2,69 @@
   height: 100%;
   overflow: auto;
   position: relative;
-  background-color: white;
   .container-content-wrapper {
     padding: 0px 16px 20px 16px;
   }
 
-  .container-footer-cta {
-    padding: 0px 16px;
+  .container-footer-wrapper {
+    .container-footer-child-wrapper {
+      padding: 0px 16px;
+      .footer-wrapper {
+        .footer-stack-wrapper {
+          > button {
+            flex-basis: 100%;
+            min-width: fit-content;
+            &:only-child {
+              max-width: fit-content;
+              margin: 0px auto;
+            }
+          }
+          .confirm-action-wrapper {
+            max-width: fit-content;
+            margin: 0px auto;
+          }
+        }
+      }
+    }
+    &.container-fixed-footer {
+      position: fixed;
+      bottom: 0px;
+      width: calc(var(--desktop-width) - 10px);
+    }
+    .container-footer-cta {
+      padding: 8px 16px 16px 16px;
+      margin: 0px -16px;
+    }
   }
 }
 
 @media (max-width: 600px) {
   .container-wrapper {
     .container-footer-wrapper {
-      position: fixed;
-      left: 0;
-      bottom: 0px;
-      right: 0;
-      display: block;
-    }
-    .container-footer-cta {
-      padding: 8px 16px 16px 16px;
+      &.container-fixed-footer {
+        position: fixed;
+        left: 0;
+        bottom: 0px;
+        right: 0;
+        width: 100%;
+        display: block;
+      }
+
+      .container-footer-child-wrapper {
+        .footer-wrapper {
+          .footer-stack-wrapper {
+            button {
+              &:only-child {
+                max-width: 100%;
+              }
+            }
+            .confirm-action-wrapper {
+              max-width: 100%;
+              margin: unset;
+            }
+          }
+        }
+      }
     }
   }
 }
