UPDATE: Product Item 1. added size of button as small, 2. updated styling of tag

--- a/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
+++ b/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
@@ -35,12 +35,16 @@
       }
       .pi-ls-bottom-item {
         margin-right: 8px;
+        &:last-child {
+          margin-right: 0px;
+        }
       }
     }
 
     .pi-right-section {
       margin-left: 10px;
       align-self: baseline;
+      min-width: fit-content;
     }
   }
 }
