--- a/react_webviews/src/designSystem/molecules/Filter/Filter.scss
+++ b/react_webviews/src/designSystem/molecules/Filter/Filter.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 16px 0px;
+  justify-content: center;
+  flex: 1;
+  padding: 16px 24px;
+  background-color: white;
   cursor: pointer;
 
   .filter-nav-badge {
