--- a/react_webviews/src/designSystem/molecules/Filter/Filter.scss
+++ b/react_webviews/src/designSystem/molecules/Filter/Filter.scss
@@ -7,6 +7,7 @@
   padding: 16px 24px;
   background-color: white;
   cursor: pointer;
+  min-width: fit-content;
 
   .filter-nav-badge {
     margin-left: 10px;
