--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -15,6 +15,8 @@
   .np-label-wrapper {
     padding-top: 16px;
     cursor: pointer;
+    display: flex;
+    align-items: flex-start;
 
     .np-lw-dot {
       min-width: 4px;
@@ -22,7 +24,7 @@
       border-radius: 50%;
       margin-right: 4px;
       display: inline-block;
-      margin-bottom: 4px;
+      margin-top: 8px;
     }
   }
 
