--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -16,15 +16,13 @@
     padding-top: 16px;
     cursor: pointer;
     display: flex;
-    align-items: flex-start;
-
+    align-items: center;
+    
     .np-lw-dot {
-      min-width: 4px;
-      min-height: 4px;
+      width: 4px;
+      height: 4px;
       border-radius: 50%;
       margin-right: 4px;
-      display: inline-block;
-      margin-top: 8px;
     }
   }
 
