UPDATE: Sub category landing 1. updated product item usage

--- a/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
@@ -1,4 +1,9 @@
 .sub-category-landing-wrapper {
+
+  .sub-category-swipper-wrapper {
+    margin: 0px -16px;
+  }
+
   .sub-category-custom-footer {
     .sc-confirmation-btn-wrapper {
       max-width: fit-content;
