--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -2339,3 +2339,8 @@ $header-title-font-size: 20px;
   background-color: #002576 !important;
   color: white !important;
 }
+.grecaptcha-badge { 
+  visibility: hidden !important;
+}
+
+
